fixed comment box overflow

--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -42,6 +42,12 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  height: 60px;
+  width: 100%;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+  overflow: scroll;
 }
 
 .new-comment-submit-button {
